# ModelAdaptationBook

./: .gitignore  ACCELERATORS.md  CHANGELOG.md  CONTRIBUTING.md  DGX-SPARK-READM.MD  DGX-SPARK-RECIPE.sh  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  errata.md  question.md
.github/workflows/: code-ci.yml
code/: README.md  pyproject.toml
code/chapter01/: README.md  run_sidebar_example.py  sidebar_outputs.json
code/chapter02/: README.md  ch02-openfinance-finetuning.py  ch02_openfinance_finetuning.py  quickstart.py  run_chapter5_adapter.py
code/chapter03/: README.md  ch03_data_quality_explore.py  ch03_data_quality_helpers.py  ch03_datasetmanifest.py  ch03_synthetic_data_generation.py
code/chapter04/: README.md  __init__.py  few_shot_demo.py  many_shot_demo.py  prompt_validator.py  rag_minimal.py
code/chapter04/data/: example_bank.jsonl  held_out_test.jsonl  policy_docs.jsonl  rag_eval.jsonl
code/chapter04/scripts/: listing_4_5_rag_eval.py  run_on_gpu.sh
code/chapter04/tests/: test_few_shot.py  test_many_shot.py  test_rag.py  test_validator.py
code/chapter05/: NOTICE.md  README.md  __init__.py  chat_template.py  data.py  dataset.py  env.example  eval.py  generate.py  metrics.py  modeling.py  multi_lora_demo.py  publish.py  train_lora.py  train_qlora.py
code/chapter05/data/dolly_subset/: manifest.json  test.jsonl  train.jsonl  valid.jsonl
code/chapter05/data/golden/: safety_regression_prompts.jsonl  toy_test.jsonl
code/chapter05/data/smoke/: train.jsonl  valid.jsonl
code/chapter05/docs/: human_review_checklist.md  inference_enterprise.md
code/chapter05/examples/: README_INTERPRETING_RESULTS.md  example_eval_comparison_r16_vs_r8.md  example_eval_report.md  example_eval_report_lora_vs_qlora.md  example_inference_base_vs_adapter.md  example_qlora_evaluation_output.md  example_qlora_training_output.md
code/chapter05/scripts/: create_safety_examples.py  fix_safety_complete.ps1  fix_safety_complete.sh  fix_safety_regression.ps1  fix_safety_regression.sh  listing_5_2_prepare_dataset.py  listing_5_4_evaluate.py  publish_adapter.py  render_figure_5_2.py  train_with_safety.py  validate_chapter05.py
code/chapter05/tests/: conftest.py  test_data_normalization.py  test_metrics.py
code/common/: __init__.py  env.py  jsonl.py  manifest.py  openrouter.py  seed.py
code/validation/cuda_dgx_spark/: Ch5_eval_report.md  README.md  dgx_spark_recipe.sh
