[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-adaptation-book"
version = "0.1.0"
description = "Runnable code for the book Practical Model Adaptation Techniques for Large Language Models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=0.30.0",
  "datasets>=2.19.0",
  "evaluate>=0.4.2",
  "huggingface_hub>=0.23.0",
  # Capped to pair with the transformers<5.0 cap below: peft<0.18 imports
  # HybridCache, which transformers 5.x removed.
  "peft>=0.12.0,<0.18",
  "rich>=13.7.0",
  # safetensors 0.6+ dropped builtins.safe_open, which breaks datasets.map
  # fingerprinting via dill. Cap until safetensors restores the symbol or
  # datasets stops fingerprinting through it.
  "safetensors>=0.4.3,<0.6",
  "sentence-transformers>=3.0.0",
  # Capped below 5.0: transformers 5.x removed HybridCache, which peft<0.18
  # imports at load time, so a fresh install on 5.x breaks `import peft`.
  "transformers>=4.47.0,<5.0",
  "trl>=0.9.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# QLoRA / quantization support. Keep optional for macOS/CPU-only readers.
qlora = ["bitsandbytes>=0.43.0"]

# Chapter 3 — data-quality experiment and synthetic data pipeline.
# The §3.1 experiment uses transformers + PEFT + TRL (core deps) in bf16 by
# default; bitsandbytes enables the optional 4-bit path. The §3.7 synthetic
# pipeline uses the Anthropic SDK; the experiment plots/scores with matplotlib
# + scikit-learn.
chapter03 = [
  "bitsandbytes>=0.43.0",
  "anthropic>=0.30.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
]

# Optional experiment tracking.
wandb = ["wandb>=0.16.0"]

# Dev/test tooling (lightweight).
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
# Packages: common (shared utilities), chapter05, chapter06, ... (code by chapter)

[tool.ruff]
line-length = 100
target-version = "py310"
